--- a/GataryLabs.SwfBox.Views/MainWindowOverviewContentView.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindowOverviewContentView.xaml
@@ -7,7 +7,8 @@
              xmlns:viewModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance viewModels:IMainWindowOverviewContentViewModel, IsDesignTimeCreatable=False}">
+             d:DataContext="{d:DesignInstance viewModels:IMainWindowOverviewContentViewModel, IsDesignTimeCreatable=False}"
+             x:Name="OverviewContentView">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -118,8 +119,10 @@
                                             <Grid ToolTip="{Binding Path}">
 
                                                 <Grid.InputBindings>
-                                                    <!-- NOT WORKING YET - WIP -->
-                                                    <MouseBinding Gesture="LeftDoubleClick" Command="{Binding SelectSwfFileCommand}" CommandParameter="{Binding}"/>
+                                                    <MouseBinding
+                                                        Gesture="LeftDoubleClick"
+                                                        CommandParameter="{Binding}"
+                                                        Command="{Binding Path=DataContext.SelectSwfFileCommand, ElementName=OverviewContentView}"/>
                                                 </Grid.InputBindings>
 
                                                 <Border Padding="1" BorderBrush="DarkGray">
@@ -153,8 +156,6 @@
                                 </ListBox>
                             </Grid>
                             
-                            
-
                         </Border>
                         
                     </Grid>
