fix file not selected in menu bar

--- a/GataryLabs.SwfBox.Views/MainWindow.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindow.xaml
@@ -32,7 +32,7 @@
 
                 <Border Style="{StaticResource Main.MainRegion.Border}">
 
-                    <ContentControl Content="{Binding MainContentViewModel}"
+                    <ContentControl Content="{Binding ContentNavigator.ContentViewModel}"
                                     ContentTemplateSelector="{StaticResource DataTemplateSelector.ViewModels}"/>
 
                 </Border>
