--- a/GataryLabs.SwfBox.Views/MainWindow.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:controls="clr-namespace:Notification.Wpf.Controls;assembly=Notification.Wpf"
         mc:Ignorable="d"
         TitleVisibility="Collapsed"
         IconVisibility="Collapsed"
@@ -30,12 +30,22 @@
 
             <Grid DockPanel.Dock="Right">
 
-                <Border Style="{StaticResource Main.MainRegion.Border}">
+                <Grid>
+                    <controls:NotificationArea x:Name="ContentNotificationArea"
+                                               Position="TopCenter"
+                                               MaxItems="1"
+                                               Panel.ZIndex="1000">
 
-                    <ContentControl Content="{Binding ContentNavigator.ContentViewModel}"
-                                    ContentTemplateSelector="{StaticResource DataTemplateSelector.ViewModels}"/>
+                    </controls:NotificationArea>
+                    
+                    <Border Style="{StaticResource Main.MainRegion.Border}">
 
-                </Border>
+                        <ContentControl Content="{Binding ContentNavigator.ContentViewModel}"
+                                        ContentTemplateSelector="{StaticResource DataTemplateSelector.ViewModels}"/>
+
+                    </Border>
+
+                </Grid>
                 
             </Grid>
         </DockPanel>
