--- a/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
@@ -2,6 +2,7 @@
              xmlns:views="clr-namespace:GataryLabs.SwfBox.Views"
              xmlns:mvvmViews="clr-namespace:GataryLabs.Mvvm.Views;assembly=GataryLabs.Mvvm.Views"
              xmlns:viewModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
+             xmlns:dataModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions.DataModels;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -153,12 +154,33 @@
                                           HorizontalAlignment="Stretch"
                                           VerticalAlignment="Stretch">
 
+                                        <!--
                                         <TextBlock Style="{StaticResource Main.Paragraph.TextBlock}"
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center"
                                                TextWrapping="Wrap"
                                                Text="{StaticResource Loca.Main.SwfDetails.Analysis.NotDone}" />
+                                        -->
 
+                                        <ScrollViewer>
+                                            <TreeView ItemsSource="{Binding Details.Analysis.Properties}"
+                                                      ScrollViewer.PanningMode="VerticalFirst"
+                                                      ScrollViewer.CanContentScroll="True"
+                                                      ScrollViewer.IsDeferredScrollingEnabled="True"
+                                                      ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                                      ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                                                <TreeView.ItemTemplate>
+                                                    <HierarchicalDataTemplate
+                                                    DataType="{x:Type dataModels:IAnalysisPropertyDataModel}"
+                                                    ItemsSource="{Binding Children}">
+
+                                                        <TextBlock Text="{Binding Name}" ToolTip="{Binding TooltipText}" />
+
+                                                    </HierarchicalDataTemplate>
+                                                </TreeView.ItemTemplate>
+                                            </TreeView>
+                                        </ScrollViewer>
+                                        
                                     </Grid>
 
                                 </DockPanel>
