--- a/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
@@ -1,12 +1,12 @@
 ﻿<mvvmViews:ContentView x:Class="GataryLabs.SwfBox.Views.MainWindowSwfDetailsContentView"
-             xmlns:views="clr-namespace:GataryLabs.SwfBox.Views"
              xmlns:mvvmViews="clr-namespace:GataryLabs.Mvvm.Views;assembly=GataryLabs.Mvvm.Views"
              xmlns:viewModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
              xmlns:dataModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions.DataModels;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
+             xmlns:converters="clr-namespace:GataryLabs.SwfBox.Views.Converters"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:pt="http://propertytools.org/wpf"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:IMainWindowSwfDetailsContentViewModel, IsDesignTimeCreatable=False}">
@@ -154,32 +154,36 @@
                                           HorizontalAlignment="Stretch"
                                           VerticalAlignment="Stretch">
 
-                                        <!--
-                                        <TextBlock Style="{StaticResource Main.Paragraph.TextBlock}"
-                                               HorizontalAlignment="Center"
-                                               VerticalAlignment="Center"
-                                               TextWrapping="Wrap"
-                                               Text="{StaticResource Loca.Main.SwfDetails.Analysis.NotDone}" />
-                                        -->
+                                        <Grid.Resources>
+                                            <converters:EmptyToVisibilityConverter x:Key="Converter.VisibleOnEmpty" CollapseOnFalse="True" Negated="False"/>
+                                            <converters:EmptyToVisibilityConverter x:Key="Converter.VisibleOnFilled" CollapseOnFalse="True" Negated="True"/>
+                                        </Grid.Resources>
 
-                                        <ScrollViewer>
-                                            <TreeView ItemsSource="{Binding Details.Analysis.Properties}"
-                                                      ScrollViewer.PanningMode="VerticalFirst"
-                                                      ScrollViewer.CanContentScroll="True"
-                                                      ScrollViewer.IsDeferredScrollingEnabled="True"
-                                                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                                                      ScrollViewer.HorizontalScrollBarVisibility="Auto">
-                                                <TreeView.ItemTemplate>
-                                                    <HierarchicalDataTemplate
+                                        <TextBlock Style="{StaticResource Main.Paragraph.TextBlock}"
+                                                   HorizontalAlignment="Center"
+                                                   Visibility="{Binding Details.Analysis.Properties, Converter={StaticResource Converter.VisibleOnEmpty}}"
+                                                   VerticalAlignment="Center"
+                                                   TextWrapping="Wrap"
+                                                   Text="{StaticResource Loca.Main.SwfDetails.Analysis.NotDone}" />
+
+                                        <Grid Visibility="{Binding Details.Analysis.Properties, Converter={StaticResource Converter.VisibleOnFilled}}">
+                                            <ScrollViewer HorizontalScrollBarVisibility="Disabled"
+                                                      VerticalScrollBarVisibility="Auto"
+                                                      CanContentScroll="True">
+
+                                                <TreeView ItemsSource="{Binding Details.Analysis.Properties}">
+                                                    <TreeView.ItemTemplate>
+                                                        <HierarchicalDataTemplate
                                                     DataType="{x:Type dataModels:IAnalysisPropertyDataModel}"
                                                     ItemsSource="{Binding Children}">
-
-                                                        <TextBlock Text="{Binding Name}" ToolTip="{Binding TooltipText}" />
-
-                                                    </HierarchicalDataTemplate>
-                                                </TreeView.ItemTemplate>
-                                            </TreeView>
-                                        </ScrollViewer>
+                                                            <Grid ToolTip="{Binding TooltipText}">
+                                                                <TextBlock Text="{Binding Name}"/>
+                                                            </Grid>
+                                                        </HierarchicalDataTemplate>
+                                                    </TreeView.ItemTemplate>
+                                                </TreeView>
+                                            </ScrollViewer>
+                                        </Grid>
                                         
                                     </Grid>
 
