--- a/GataryLabs.SwfBox.Views/Resources/Localization_DE-de.xaml
+++ b/GataryLabs.SwfBox.Views/Resources/Localization_DE-de.xaml
@@ -42,6 +42,10 @@
         Analysieren
     </system:String>
 
+    <system:String x:Key="Loca.Main.SwfDetails.Button.Explore.Text">
+        Ordner öffnen
+    </system:String>
+
     <system:String x:Key="Loca.Main.SwfDetails.Headline.Activity">
         Bisherige Aktivität
     </system:String>
